--- a/reto.css
+++ b/reto.css
@@ -1,3 +1,16 @@
 #logo {
     border-radius: 50%;
 }
+body {
+    background-color: rgb(235, 235, 192);
+}
+
+h1 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+img {
+    width: 90px;
+    padding: 10px;
+}
+
