--- a/reto.css
+++ b/reto.css
@@ -35,9 +35,10 @@ p{
     text-align: center;
 }
 
-a{
-    display:flex    ;  
+footer{
+    display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 
 #icons {
