--- a/reto.css
+++ b/reto.css
@@ -3,6 +3,7 @@
 #logo {
     border-radius: 50%;
     width: 250px;
+   
     margin-bottom: 50px;
     display: block;
     margin: auto;
@@ -13,6 +14,7 @@
 
 body {
     background-color: rgb(235, 235, 192);
+    margin-top: 50px;
 }
 
 h1 {
