--- a/reto.css
+++ b/reto.css
@@ -1,46 +1,60 @@
-
+*{
+    margin:0;
+    padding: 0;;
+}
 
 #logo {
     border-radius: 50%;
     width: 250px;
-   
     margin-bottom: 50px;
     display: block;
     margin: auto;
     
 }
 
-
+.main{
+    background-color: hsla(224,54%,30%,0.6);
+    width: 60%;
+    padding: 30px;
+    border-radius: 20px;
+}
 
 body {
-    background-color: rgb(235, 235, 192);
+    background-image: url(https://c8.alamy.com/compes/2ch61f4/lugar-de-trabajo-moderno-de-programador-en-la-oficina-por-la-noche-2ch61f4.jpg);
+    background-size: cover;
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
 }
 
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 50px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     text-align: center;
     color: #d85353;
 }
 
-h2{
-    margin-bottom: 50px;
+.subtitulo{
+    margin-bottom: 25px;
     font-size: 35px;
     text-align: center;
+    color: #FFF;
 }
 
-p{
+.parrafo{
     margin-bottom: 50px;
     font-size: 25px;
     text-align: center;
+    color: #FFF;
 }
 
 footer{
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    gap:50px;
 }
 
 #icons {
