--- a/reto.css
+++ b/reto.css
@@ -3,29 +3,28 @@
     padding: 0;;
 }
 
-#logo {
-    border-radius: 50%;
-    width: 250px;
-    margin-bottom: 50px;
-    display: block;
-    margin: auto;
-    
-}
-
-.main{
-    background-color: hsla(224,54%,30%,0.6);
-    width: 60%;
-    padding: 30px;
-    border-radius: 20px;
-}
-
 body {
     background-image: url(https://c8.alamy.com/compes/2ch61f4/lugar-de-trabajo-moderno-de-programador-en-la-oficina-por-la-noche-2ch61f4.jpg);
     background-size: cover;
-    margin-top: 50px;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
-    align-items: center;  
+    align-items: center;
+}
+
+.main{
+    background-color: hsla(224,54%,30%,0.80);
+    width: 60%;
+    padding: 40px 0px 20px 0px;
+    border-radius: 20px;
+}
+
+#logo {
+    border-radius: 50%;
+    width: 250px;
+    display: block;
+    margin: auto;
+    padding-bottom: 25px;
 }
 
 h1 {
@@ -44,7 +43,7 @@ h1 {
 }
 
 .parrafo{
-    margin-bottom: 50px;
+    margin-bottom: 15px;
     font-size: 25px;
     text-align: center;
     color: #FFF;
@@ -55,14 +54,15 @@ footer{
     justify-content: center;
     align-items: flex-end;
     gap:50px;
+    padding: 22px;
 }
 
 #icons {
-    width: 90px;
+    width: 80px;
     padding: 10px;
-
 }
 
 #icons:hover {
-    width: 120px;
+    transform: scale(1.2);
+    transition: all 0.5s ease;
 }
